# light_frame

./: CMakeLists.txt  LICENSE  README.md
scripts/: 99-backlight.rules.in  backlight_capture.bat.in  backlight_capture.entitlements  backlight_capture.sh.in  backlight_capture@.service.in  com.backlight_capture.backlight_capture.plist.in  info.plist
src/: backlight_capture@.service  com.backlight_capture.backlight_capture.plist.in  main.cpp  manage-backlight-capture  run_screen_capture.bat.in
